--- a/final_vis.html
+++ b/final_vis.html
@@ -21,7 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
     <script src="https://turbo87.github.io/sidebar-v2/js/leaflet-sidebar.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
@@ -33,6 +33,16 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" >
     <link rel="stylesheet" href="https://turbo87.github.io/sidebar-v2/css/leaflet-sidebar.css" />
+
+    <script src="https://unpkg.com/leaflet-geosearch@3.0.0/dist/geosearch.umd.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@3.0.0/dist/geosearch.css"
+/>
+
+
+    <link href="AnimatedSearchBox.css" rel="stylesheet">
+    <script src="AnimatedSearchBox.js"></script>
+
+
 
             <style>
                 body {
@@ -46,7 +56,7 @@
                 }
 
                 .lorem {
-                    font-style: italic;
+                    /*font-style: italic;*/
                     color: #AAA;
                 }
 
@@ -71,6 +81,36 @@
                 .sidebar-header{
                     font-size: 18.0pt;
                 }
+
+                p {
+                    margin: 10px 0 10px;
+                }
+
+                legend .square{
+                    line-height: 18px;
+                    color: #555;
+                    border-style: double;
+                }
+                .legend i {
+                    border-style: double;
+                    border: #000000;
+                    width: 18px;
+                    height: 18px;
+                    float: left;
+                    margin-right: 8px;
+                    opacity: 0.7;
+                }
+                #load-container{
+                    width: 200px;
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    transform: translateX(-100px);
+                }
+                #load-container{
+                    margin-top: 50px;
+                }
+
             </style>
 </head>
 
@@ -94,21 +134,25 @@
                 <div class="sidebar-content">
                     <div class="sidebar-pane" id="home">
                         <h1 class="sidebar-header">
-                            Traffic Accident Hotspots
+                            Real Time Traffic Accident Hotspots
                             <span class="sidebar-close"><i class="fa fa-caret-left"></i></span>
                         </h1>
 
                         <p> <b> Time: </b> <span id="time"> </span> </p>
 
-                        <p> <b> Weather: </b> <span id="weatherT"> </span>F, <span id="weatherH"> </span>% humidity </p>
+                        <p> <b> Weather: </b> temperature <span id="weatherT"> </span>F, humidity <span id="weatherH"> </span>%, wind <span id="weatherWind"></span> mph</p>
 
-                        <p class="lorem"> Motor vehicle crashes are a leading cause of death in the United States. This project develops a tool to be used by both civilian and first responders that identifies traffic accident hotspots based on user input date. This tool allows users to map along the safest routes and identifies areas with high accident possibility for first responders. We used a XGBoost classifier to model the accidents and show results by calling the API we developed and visualizing with XXX.  </p>
+                        <p class="lorem"> Traffic Accident Hotspots is a visualization tool developed for <b> real-time </b> prediction of vehicle collision hotspots in the city of Los Angeles and is meant to be used by both civilians and first responders.</p>
+
+                        <p class="lorem">Our team used the XGBoost Classifier to build a prediction model. The feature importances produced by XGBoost are shown below:</p>
 
                         <p class="lorem"> <img src="img_factors.jpg" alt="visualization of factors" style=”width:700px;height:400px;> </p>
 
-                        <p class="lorem"> test </p>
+                        <p class="lorem"> Every time this page is updated, our custom API produces a new real time prediction taking into account current weather, time of the day, and day of the week among other factors. Received data is visualized using multiple JavaScript libraries. It can take up to 30 seconds to fit our model with a new data set due to the high data volume, please be patient.</p>
 
-                        <p class="lorem"> test </p>
+                        <p class="lorem"> Historical data contains approx. 275,000 car accidents that occurred between February 2016 and December 2021 in Los Angeles County. A part of this data was used to train the XGBoost Classifier.</p>
+
+                        <p class="lorem">  </p>
                     </div>
 
                     <div class="sidebar-pane" id="profile">
@@ -127,8 +171,11 @@
                 </div>
             </div>
 
-            <div style="text-align: center; margin-top: 50px; margin-bottom: 20px;">Map Loading... </div>
-            <div style="width: 120px; margin-left: auto; margin-right: auto;"><div class="loader"></div></div>
+            <div id="load-container">
+                <div id="loading-gif" style="text-align: center; margin-bottom: 20px;">Map Loading... </div>
+                <div style="width: 120px; margin-left: auto; margin-right: auto;"><div class="loader"></div></div>
+            </div>
+
 
             <div id="map" class="folium-map"></div>
 </body>
@@ -138,66 +185,79 @@
             //console.log(datetime)
             document.getElementById("time").textContent = datetime;
 
-            const apiBaseUrl = 'http://localhost:8000/predict/all';
+            // const apiBaseUrl = 'http://localhost:8000/predict/all';
+            const apiBaseUrl = "https://violetredafraidstacks.jsaunders40.repl.co/predict/all"
             //const apiBaseUrl = 'http://localhost:8000';
             fetch(apiBaseUrl).then((resp) => resp.json())
                 .then((data) => {
-                    // WEATHER INFO
-                    var weather = data["weather"];
-                    var weatherT = weather["Temperature(F)"];
-                    var weatherH = weather["Humidity(%)"];
-                    //var weatherP = Number(weather["Pressure(in)"]).toFixed(2);
-                    document.getElementById("weatherT").textContent = weatherT;
-                    document.getElementById("weatherH").textContent = weatherH;
-                    //document.getElementById("weatherP").textContent = weatherP;
-
-                    // READ DATA
-                    data = data["predictions"];
-                    var heatData = [];
-                    for (var i=1; i<data.length; i++) {
-                        var parts = data[i];
-                        if (parts["label"] != "0"){
-                            heatData.push([Number(parts["lat"]), Number(parts["lon"])]);
-                        }
-                    }
-
-                    // CREATE A MAP
-                    var map = L.map(
-                        "map",
-                        {
-                            center: [34.2012, -118.4662],
-                            crs: L.CRS.EPSG3857,
-                            zoom: 11,
-                            //scaleRadius: false,
-                            zoomControl: true,
-                            preferCanvas: false,
-                        }
-                    );
-
-
-
-                    // TILE LAYER
-                    var tile_layer = L.tileLayer(
-                        "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
-                        {"attribution": "Data by \u0026copy; \u003ca href=\"http://openstreetmap.org\"\u003eOpenStreetMap\u003c/a\u003e, under \u003ca href=\"http://www.openstreetmap.org/copyright\"\u003eODbL\u003c/a\u003e.", "detectRetina": false, "maxNativeZoom": 18, "maxZoom": 18, "minZoom": 6, "noWrap": false, "opacity": 1, "subdomains": "abc", "tms": false}
-                    ).addTo(map);
-
-                    //var marker = L.marker([34.2012, -118.4662]).addTo(map);
-
-                    const sidebar = L.control.sidebar('sidebar').addTo(map);
-                    sidebar.open('home');
-
-                    // HEATMAP LAYER PREDICTION
-                    heat_map = L.heatLayer(
-                        heatData,  // data for heatmap
-                        {"radius": 15}
-                    ).addTo(map);
-
                     // HEATMAP LAYER HISTORICAL
                     fetch('data_short.csv').then(function(response){
                         return response.text();
                     }).then(function(text){
-                        // Start_Lat,Start_Lng
+                        // http://localhost:8000/predict/zip/90001
+                        // WEATHER INFO
+
+                        var weather = data["weather"];
+                        console.log(weather)
+                        var weatherT = weather["Temperature(F)"];
+                        var weatherH = weather["Humidity(%)"];
+                        // var weatherP = weather["Pressure(in)"];
+                        var weatherWind = Number(weather["Wind_Speed(mph)"]).toFixed(1);
+                        console.log(weatherWind)
+                        document.getElementById("weatherT").textContent = weatherT;
+                        document.getElementById("weatherH").textContent = weatherH;
+                        document.getElementById("weatherWind").textContent = weatherWind;
+
+                        // READ DATA
+                        data = data["predictions"];
+                        var heatData = [];
+                        for (var i=1; i<data.length; i++) {
+                            var parts = data[i];
+                            if (parts["label"] != "0"){
+                                heatData.push([Number(parts["lat"]), Number(parts["lon"])]);
+                            }
+                        }
+
+                        // CREATE A MAP
+                        var map = L.map(
+                            "map",
+                            {
+                                center: [34.2012, -118.4662],
+                                crs: L.CRS.EPSG3857,
+                                zoom: 11,
+                                //scaleRadius: false,
+                                zoomControl: true,
+                                preferCanvas: false,
+                            }
+                        );
+
+                        // TILE LAYER
+                        var tile_layer = L.tileLayer(
+                            "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+                            {"attribution": "Data by \u0026copy; \u003ca href=\"http://openstreetmap.org\"\u003eOpenStreetMap\u003c/a\u003e, under \u003ca href=\"http://www.openstreetmap.org/copyright\"\u003eODbL\u003c/a\u003e.", "detectRetina": false, "maxNativeZoom": 18, "maxZoom": 18, "minZoom": 6, "noWrap": false, "opacity": 1, "subdomains": "abc", "tms": false}
+                        ).addTo(map);
+
+                        //var marker = L.marker([34.2012, -118.4662]).addTo(map);
+
+                        const sidebar = L.control.sidebar('sidebar').addTo(map);
+                        sidebar.open('home');
+
+                        // SEARCH BOX
+                        var searchbox = L.control.searchbox({
+                            position: 'topright',
+                            expand: 'left'
+                        }).addTo(map);
+
+                        searchbox.addItem("91101")
+                        searchbox.addItem("90001")
+
+                        // HEATMAP LAYER PREDICTION
+                        heat_map = L.heatLayer(
+                            heatData,  // data for heatmap
+                            {"radius": 15}
+                        ).addTo(map);
+
+                        // HISTORICAL DATA
                         var lines = text.split("\n");
                         var historicalData = [];
 
@@ -207,85 +267,61 @@
                         }
                         historical_heat_map = L.heatLayer(
                             historicalData,
-                            {"radius": 15}
+                            {"radius": 25}
                         ).addTo(map)
+
+                        // LAYERS LEGEND
+                        var layer_control = {
+                            base_layers : {
+                                //"Select layer:" : tile_layer, heat_map,
+                                "Current prediction" : heat_map,
+                                "Historical data" : historical_heat_map,
+                            },
+                            overlays :  {
+                                // empty currently
+                            },
+                        };
+
+                        L.control.layers(
+                            layer_control.base_layers,
+                            layer_control.overlays,
+                            {"autoZIndex": true, "collapsed": false, "position": "topright"}
+                        ).addTo(map);
+
+                        var legend = L.control({position: 'bottomright'});
+
+                        function getColor(d) {
+                            return d > 0.8   ? '#800026' :
+                                   d > 0.6  ? '#ffd800' :
+                                   d > 0.4  ? '#4bfb5d' :
+                                   d > 0.1  ? '#0019bd' :
+                                              'rgba(245,239,239,0.2)';
+                        }
+
+                        legend.onAdd = function (map) {
+
+                            var div = L.DomUtil.create('div', 'info legend'),
+                                grades = [0, 0.1, 0.4, 0.6, 0.8],
+                                labels = ['<strong> Density </strong> <br>'];
+
+                            // loop through our density intervals and generate a label with a colored square for each interval
+                            div.innerHTML += labels.join('<br>')
+
+                            for (var i = 0; i < grades.length; i++) {
+                                div.innerHTML +=
+                                    '<i class="square" style="background:' + getColor(grades[i] + 0.01) + '"></i> ' +
+                                    grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+                            }
+
+                            //div.innerHTML = labels.join()
+
+
+                            return div;
+                        };
+
+                        legend.addTo(map);
+
+                        //document.getElementById('loading-gif').style.display = "none";
                     });
-
-                    // LAYERS LEGEND
-                     var layer_control = {
-                        base_layers : {
-                            "Select layer:" : tile_layer,
-                        },
-                        overlays :  {
-                            //"Heat map - all time data" : historical_heat_map,
-                            "Real time prediction" : heat_map,
-                            // "polygon" : geo_json_aab607d18ecce109b7603d8704589b4c,
-                        },
-                    };
-
-                    L.control.layers(
-                        layer_control.base_layers,
-                        layer_control.overlays,
-                        {"autoZIndex": true, "collapsed": false, "position": "topright"}
-                    ).addTo(map);
-
-                    /*async function fetchHistorical(){
-                        const responce = await fetch('data_short.csv');
-                        const csv_as_text = await responce.text();
-                        //console.log(csv_as_text)
-                        return csv_as_text
-                    }
-
-                    async function test(){
-                        const exam = fetchHistorical();
-                        console.log(exam);
-                    }
-
-                    console.log(test())*/
-
-
-
-
-
-
-                    /*// TEXT BOX
-                    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-                            attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-                        }).addTo(map);
-
-                        var popup = L.popup({
-                              closeButton: false,
-                              autoClose: false
-                            })
-                            .setLatLng([34.2012, -118.4662])
-                            .setContent('<p>Text box on a map</p>')
-                            .openOn(map);*/
-
-                    /* // SIDEBAR
-                    var sidebar = L.control.sidebar('sidebar', {
-                        position: 'left',
-                        closeButton: 'true'
-                    });
-
-                    map.addControl(sidebar);
-
-                    sidebar.setContent('test <b>TEXT TEXT TEXT</b> test');
-
-                    sidebar.show();
-
-                    var visible = sidebar.isVisible();*/
-
-                    // EASYBUTTONS
-                    /*var helloPopup = L.popup().setContent('Hello World!');
-
-                    L.easyButton('fa-star', function(btn, map){
-                        helloPopup.setLatLng(map.getCenter()).openOn(map);
-                    }).addTo(map);
-
-                    L.easyButton('<strong>A<strong>', function(btn, map){
-                        alert("Hi! This is our project");
-                    }).addTo(map);*/
-
-
             });
 </script>
