--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
                         <p class="lorem">Our team used the XGBoost Classifier to build a prediction model. The feature importances produced by XGBoost are shown below:</p>
 
-                        <p class="lorem"> <img src="img_factors.jpg" alt="visualization of factors" style=”width:700px;height:400px;> </p>
+                        <p class="lorem"> <img src="https://github.com/CSE6242-Team-129/cse6242-team-129.github.io/img_factors.jpg" alt="visualization of factors" style=”width:700px;height:400px;> </p>
 
                         <p class="lorem"> Every time this page is updated, our custom API produces a new real time prediction taking into account current weather, time of the day, and day of the week among other factors. Received data is visualized using multiple JavaScript libraries. It can take up to 30 seconds to fit our model with a new data set due to the high data volume, please be patient.</p>
 
