--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             document.getElementById("time").textContent = datetime;
 
             // const apiBaseUrl = 'http://localhost:8000/predict/all';
-            // const apiBaseUrl = "https://violetredafraidstacks.jsaunders40.repl.co/predict/all"
-            const apiBaseUrl = "https://violetredafraidstacks.jsaunders40.repl.co/"
+            const apiBaseUrl = "https://violetredafraidstacks.jsaunders40.repl.co/predict/all"
+            //const apiBaseUrl = "https://violetredafraidstacks.jsaunders40.repl.co/"
             //const apiBaseUrl = 'http://localhost:8000';
             fetch(apiBaseUrl).then((resp) => resp.json())
                 .then((data) => {
