--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                         <p> <b> Weather: </b> temperature <span id="weatherT"> </span>F, humidity <span id="weatherH"> </span>%, wind <span id="weatherWind"></span> mph</p>
 
-                        <p class="lorem"> Traffic Accident Hotspots is a visualization tool developed for <b> real-time </b> prediction of vehicle collision hotspots in the city of Los Angeles and is meant to be used by both civilians and first responders.</p>
+                        <p class="lorem"> Traffic Accident Hotspots is a visualization tool developed for <b> real-time </b> prediction of vehicle collision hotspots in the City of Los Angeles (excepth San Fernando Valley) and is meant to be used by both civilians and first responders.</p>
 
                         <p class="lorem">Our team used the XGBoost Classifier to build a prediction model. The feature importances produced by XGBoost are shown below:</p>
 
